@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ssh-keygen.1,v 1.33 2001/03/02 18:54:31 deraadt Exp $
+.\"	$OpenBSD: ssh-keygen.1,v 1.34 2001/03/11 15:04:16 jakob Exp $
 .\"
 .\"  -*- nroff -*-
 .\"
@@ -72,6 +72,7 @@
 .Op Fl f Ar keyfile
 .Nm ssh-keygen
 .Fl l
+.Op Fl v
 .Op Fl f Ar input_keyfile
 .Sh DESCRIPTION
 .Nm
@@ -172,6 +173,8 @@ Provides the new comment.
 Provides the new passphrase.
 .It Fl P Ar passphrase
 Provides the (old) passphrase.
+.It Fl v
+Print verbose information.
 .It Fl x
 This option will read a private
 OpenSSH DSA format file and print a SSH2-compatible public key to stdout.
